# notesmaker

./: .env.example  .gitignore  MODULARIZATION_COMPLETE.md  README.md  example.md  main.py  notes_qauntum_computing_11499.md  pyproject.toml  requirements.txt  setup.py  test_web_system.py  validate_system.py
backup_original/: aI_agent_2.py  record.py
config/: __init__.py  settings.py
examples/: __init__.py  advanced_usage.py  basic_usage.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  planner.py  retriever.py  synthesizer.py  web_searcher.py
src/core/: __init__.py  data_structures.py  document_loader.py  llm_wrapper.py  system.py
src/utils/: __init__.py  helpers.py  recorder.py
tests/: __init__.py  test_imports.py  test_web_system.py
tests/test_agents/: __init__.py
tests/test_core/: __init__.py  test_document_loader.py
tests/test_utils/: __init__.py  test_helpers.py
