[project]
name = "notesmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.1",
    "pypdf>=5.6.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "tavily-python>=0.7.8",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
